--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "loss-aversion-questionaire",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.2.1"
+    "@rails/webpacker": "^3.2.1",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
