--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/webpacker": "^3.2.1",
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "rails-ujs": "^5.1.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
