--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
-    "rails-ujs": "^5.1.4"
+    "rails-ujs": "^5.1.4",
+    "turbolinks": "^5.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
